update(*): update README.md & add keywords to package.json

--- a/package.json
+++ b/package.json
@@ -55,5 +55,10 @@
   },
   "dependencies": {
     "got": "^11.8.5"
-  }
+  },
+  "keywords": [
+    "edahab",
+    "edahab api",
+    "edahab npm"
+  ]
 }
