--- a/package.json
+++ b/package.json
@@ -31,7 +31,7 @@
     "singleQuote": true,
     "trailingComma": "es5"
   },
-  "name": "edahab",
+  "name": "edahab-api",
   "author": "Mubarak Shabel",
   "module": "dist/edahab.esm.js",
   "size-limit": [
